template and form made for the creation of a menu

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -38,6 +38,7 @@
                     <option>{{menu.date}}</option>
                 {% endfor %}
             </select></h3>
+            <button onclick='location.href="/planner/create_menu"'>Create New Menu</button>
             <table>
                 <thead>
                     <th>Monday</th>
