submit button added to menu form

--- a/menu/planner/templates/create_menu.html
+++ b/menu/planner/templates/create_menu.html
@@ -79,6 +79,8 @@
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
+
+                <input type="submit" value="Add Menu"
                 </select>
             </form>
         </div>
