still not able to create a menu

--- a/menu/planner/templates/create_menu.html
+++ b/menu/planner/templates/create_menu.html
@@ -33,49 +33,49 @@
                 <input type="date" id="week_date" name="week_date">
 
                 <label for="mon">Monday:</label>
-                <select>
+                <select id="mon" name="mon">
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="tues">Tuesday:</label>
-                <select>
+                <select id="tues" name="tues">
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="wed">Wednesday:</label>
-                <select>
+                <select id="wed" name="wed">
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="thurs">Thursday:</label>
-                <select>
+                <select id="thurs" name="thurs">
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="fri">Friday:</label>
-                <select>
+                <select id="fri" name="fri">
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="sat">Saturday:</label>
-                <select>
+                <select id="sat" name="sat">
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="sun">Sunday:</label>
-                <select>
+                <select id="sun" name="sun">
                     {% for recipe in all_recipes %}
                     <option>{{recipe.title}}</option>
                     {% endfor %}
