--- a/menu/login/templates/reg_login.html
+++ b/menu/login/templates/reg_login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login to Menu Maker</title>
-    <!-- {% load static %}
-    <link rel="stylesheet" href="{% static 'css/reg_log.css' %}">  -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/reg_log.css' %}"> 
 </head>
 <body>
     <div id=wrapper>
