finally able to add a menu item. Had to pass id through in order to use foreign key. Add to add recipe id as the vaue being passed through with the form

--- a/menu/planner/templates/create_menu.html
+++ b/menu/planner/templates/create_menu.html
@@ -35,49 +35,49 @@
                 <label for="mon">Monday:</label>
                 <select id="mon" name="mon">
                     {% for recipe in all_recipes %}
-                    <option>{{recipe.title}}</option>
+                    <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="tues">Tuesday:</label>
                 <select id="tues" name="tues">
                     {% for recipe in all_recipes %}
-                    <option>{{recipe.title}}</option>
+                    <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="wed">Wednesday:</label>
                 <select id="wed" name="wed">
                     {% for recipe in all_recipes %}
-                    <option>{{recipe.title}}</option>
+                    <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="thurs">Thursday:</label>
                 <select id="thurs" name="thurs">
                     {% for recipe in all_recipes %}
-                    <option>{{recipe.title}}</option>
+                    <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="fri">Friday:</label>
                 <select id="fri" name="fri">
                     {% for recipe in all_recipes %}
-                    <option>{{recipe.title}}</option>
+                    <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="sat">Saturday:</label>
                 <select id="sat" name="sat">
                     {% for recipe in all_recipes %}
-                    <option>{{recipe.title}}</option>
+                    <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="sun">Sunday:</label>
                 <select id="sun" name="sun">
                     {% for recipe in all_recipes %}
-                    <option>{{recipe.title}}</option>
+                    <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
 
                 <input type="submit" value="Add Menu">
