--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -33,12 +33,7 @@
 
         <div class="week">
             <!-- this will display the week a looks view with the menu the user has select -->
-            <h3>Week of:<select>
-                {% for menu in all_menus %}
-                    <option>{{menu.date}}</option>
-                {% endfor %}
-            </select></h3>
-            <button onclick='location.href="/planner/create_menu"'>Create New Menu</button>
+
             <table>
                 <thead>
                     <th>Monday</th>
@@ -50,28 +45,43 @@
                     <th>Sunday</th>
                 </thead>
                 <tbody>
-                    <td>Mon Recipe HERE</td>
-                    <td>Tues Recipe HERE</td>
-                    <td>Wed Recipe HERE</td>
-                    <td>Thurs Recipe HERE</td>
-                    <td>Fri Recipe HERE</td>
-                    <td>Sat Recipe HERE</td>
-                    <td>Sun Recipe HERE</td>
+                    {% if current_menu.mon == None %}
+                    <td>No recipe added to Monday</td>
+                    {% else %}
+                    <td><a href = planner/recipe_info/{{current_menu.mon.id}} ></a>{{current_menu.mon.title}}</td>
+                    {% endif %}
+                    <td>{{current_menu.tues.title}}</td>
+                    <td>{{current_menu.wed.title}}</td>
+                    <td>{{current_menu.thurs.title}}</td>
+                    <td>{{current_menu.fri.title}}</td>
+                    <td>{{current_menu.sat.title}}</td>
+                    <td>{{current_menu.sun.title}}</td>
                 </tbody>
             </table>
+            
         </div>
 
+        <button onclick='location.href="/planner/create_menu"'>Create New Menu</button>
         <button onclick='location.href="/planner/user_recipes/{{user.id}}"'>Browse Recipes</button>
 
-        <div class="grocery_list">
+        <!-- <div class="grocery_list">
             <h3>Grocery List:</h3>
             <ul>
                 <li>Loop through items on the list</li>
             </ul>
             <button>Quick Add</button>
             <button onclick='location.href="/planner/grocery_list"'>See Full List</button>
-        </div>
-
+        </div> -->
+        
+        <!-- <form action="planner/veiw_menu/{{menu.id}}" method="POST">
+            <h3>Week of: <select>
+                {% for menu in all_menus %}
+                <p>{{menu.week_date}}</p>
+                    <option value="{{menu.id}}">{{menu.week_date}}</option>
+                {% endfor %}
+            </select>
+            <input type="submit" value="View"> -->
+        </form>
 
     </div>
 </body>
