--- a/menu/login/static/css/reg_log.css
+++ b/menu/login/static/css/reg_log.css
@@ -6,13 +6,14 @@
 #wrapper{
     padding: 40px;
     width: auto;
-    height: auto;
+    height: 2000px;
     background-color: rgba(196, 223, 247, 0.568);
 }
 
 .title{
     display: block;
     margin-left: 35%;
+    font-family: Gurmukhi MN;
 
 }
 
