images added to login page

--- a/menu/login/static/css/login.css
+++ b/menu/login/static/css/login.css
@@ -54,3 +54,10 @@ button,form{
     text-align: center;
     text-emphasis: bold;
 }
+
+img{
+    border-radius: 8px;
+    width: 285px;
+    height: 269px;
+    margin-top: 30px;
+}
