--- a/menu/login/templates/reg_login.html
+++ b/menu/login/templates/reg_login.html
@@ -15,6 +15,13 @@
             <h3>Lets get planning!</h3>
         </div>
 
+        <div class="images">
+            <img src="{% static 'media/creamy_chicken.png' %}" alt="Creamy Chicken in Skillet">
+            <img src="{% static 'media/dumplings.png' %}" alt="Sesame Dumplings">
+            <img src="{% static 'media/avo_chicken.png' %}" alt="Grilled Chicken with Avocado Salsa">
+            <img src="{% static 'media/meatballs.png' %}" alt="Cheesey Meatballs">
+        </div>
+
         <div class='login'>
             <!-- login form -->
             <h2>Login</h2>
