--- a/menu/login/static/css/login.css
+++ b/menu/login/static/css/login.css
@@ -14,7 +14,7 @@
 
 .title{
     display: block;
-    margin-left: 35%;
+    /* margin-left: 35%; */
 
 }
 
@@ -24,6 +24,7 @@
     margin-left: 35%;
     width: 250px;
     padding: 10px;
+    text-align: center;
 }
 
 h2{
@@ -36,8 +37,9 @@ input{
 }
 
 .register{
-    margin-left: 40%;
-    width: 250px;
+    text-align: center;
+    margin-left: 33%;
+    width: 305px;
 }
 
 button,form{
@@ -60,4 +62,14 @@ img{
     width: 285px;
     height: 269px;
     margin-top: 30px;
+}
+
+h1{
+    font-size: 50px;
+    text-align: center;
+}
+
+h3{
+    text-align: center;
+    font-size: 20px;
 }
