--- a/menu/login/templates/register.html
+++ b/menu/login/templates/register.html
@@ -10,17 +10,21 @@
 </head>
 <body>
     <div id=wrapper>
+        <div class="title">
+            <h1>Welcome to Menu Maker!</h1>
+            <h3>***DESCRIPTION OF PROJECT***</h3>
+            <p>To Join Register Below</p>
+        </div>
+
+        <div class="images">
+            <img src="{% static 'media/creamy_chicken.png' %}" alt="Creamy Chicken in Skillet">
+            <img src="{% static 'media/dumplings.png' %}" alt="Sesame Dumplings">
+            <img src="{% static 'media/avo_chicken.png' %}" alt="Grilled Chicken with Avocado Salsa">
+            <img src="{% static 'media/meatballs.png' %}" alt="Cheesey Meatballs">
+        </div>
+
+        <!-- registration form -->
         <div class='register'>
-            <div class="title">
-                <h1>Welcome to Menu Maker!</h1>
-                <h3>***DESCRIPTION OF PROJECT***</h3>
-                <p>To Join Register Below</p>
-            </div>
-
-            <!-- take user back to login page -->
-            <button onclick='location.href="/"'>Back</button>
-
-            <!-- registration form -->
             <form action='/register' method='POST'>
                 {% csrf_token %}
                 <label for='first_name'>First Name:</label>
@@ -50,6 +54,9 @@
             {% endfor %}    
         </ul>
         {% endif %}
+
+        <!-- take user back to login page -->
+        <button onclick='location.href="/"'>Back</button>
     </div>
 </body>
 </html>
