--- a/menu/planner/templates/recipe_info.html
+++ b/menu/planner/templates/recipe_info.html
@@ -5,25 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Information</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/recipe_info.css' %}"> 
 </head>
 <body>
     <div id="wrapper">
         <div class="nav_bar">
             <h3>Menu Maker</h3>
-            <!-- Button will take user back to the home page -->
-            <button onclick='location.href="/planner"'>Home</button>
-
+            <!-- logout route clears session and returns to login page (functioning) -->
+            <button onclick='location.href="/logout"'>Logout</button>
+        </div>
+        
+        <div class="recipe_nav">
             <!-- favorite_recipes will take the user to the recipes they have favorited -->
             <a href="/planner/all_recipes">All Recipes</a> |
             <!-- all_recipes will take you to all the recipes added by all users -->
             <a href="/planner/user_recipes/{{user.id}}">Your Recipes</a> |
             <!-- favorite_recipes will take the user to the recipes they have favorited -->
             <a href="/planner/favorite_recipes">Favorite Recipes</a>
-
-            <!-- logout route clears session and returns to login page (functioning) -->
-            <button onclick='location.href="/logout"'>Logout</button>
+            <!-- Button will take user back to the home page -->
         </div>
-        
+        <button class="home" onclick='location.href="/planner"'>Home</button>
+
         <div class="recipe">
             <h1>{{recipe.title}}</h1>
             <h4>{{recipe.description}}</h4>
