--- a/menu/planner/static/css/recipe_info.css
+++ b/menu/planner/static/css/recipe_info.css
@@ -42,3 +42,13 @@ h3{
 
 /* ABOVE WILL BE STANDARD FOR ALL PAGES */
 
+.recipe{
+    margin-left: 35%;
+    margin-top: 50px;
+}
+
+h1{
+    margin-left: 5%;
+    margin-bottom: 30px;
+}
+
