--- a/menu/planner/templates/recipe_info.html
+++ b/menu/planner/templates/recipe_info.html
@@ -30,6 +30,7 @@
         <div class="recipe">
             <h1>{{recipe.title}}</h1>
             <h4>{{recipe.description}}</h4>
+            <img src="{% static 'media/no_image.png' %}" alt="No Photo Available">
             <p>Prep Time: {{recipe.prep}}</p>
             <p>Cook Time: {{recipe.cook}}</p>
             <h5>Ingredients:</h5>
